<?xml version="1.0"?>
<package format="2">
  <name>neem-interface</name>
  <version>0.0.0</version>
  <description>The neem-interface package</description>

  <maintainer email="jongebloed@uni-bremen.de">Sascha Jongebloed</maintainer>

  <license>BSD</license>

  <exec_depend>knowrob</exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

</package>
